[fix] sidebar gap on pc

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,12 +61,12 @@ html, body{
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: rgba(136, 136, 136, 0.5); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: rgba(85, 85, 85, 0.5); 
 }
 
 *{
